--- a/website/_assets/stylesheets/_screen.scss
+++ b/website/_assets/stylesheets/_screen.scss
@@ -1,3 +1,4 @@
+$media-fat: "only screen and (max-width:800px)";
 $media-narrow: "only screen and (max-width:600px)";
 $font-body: 'OpenSans', Helvetica, Arial;
 $font-header: 'LeagueGothic', Impact, Helvetica, Arial;
